fixed cart spacing

--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -66,6 +66,7 @@
   margin-bottom: 2vh;
   border-radius: 20px;
   height: 12vh;
+  width: 48vw;
 }
 
 .custom_order_card {
